--- a/skin/frontend/meanbee/default/css/_sidebar.scss
+++ b/skin/frontend/meanbee/default/css/_sidebar.scss
@@ -1,7 +1,7 @@
 /* Sidebar ======================================================================= */
 .block { border: 1px solid #c4c1bc; margin: 0 0 15px;
     .block-title { background: url(../images/bkg_block-title.gif) repeat-x 0 0; border-bottom: 1px solid #ddd; padding: 2px 9px;
-        strong { display: block; color: #e26703; font: bold 12px/16px Arial, Helvetica, sans-serif; min-height: 16px; padding: 1px 0 1px; text-transform: uppercase;
+        strong { display: block; color: #e26703; font: bold em(12)/em(16) Arial, Helvetica, sans-serif; min-height: 16px; padding: 1px 0 1px; text-transform: uppercase;
             span {}
         }
         a { text-decoration: none !important; }
@@ -33,7 +33,7 @@
 .block-compared,
 .block-related,
 .block-tags,
-.block-login { font-size: 11px; line-height: 1.25; }
+.block-login { font-size: em(11); line-height: 1.25; }
 .block-cart .block-title strong,
 .block-wishlist .block-title strong,
 .block-subscribe .block-title strong,
@@ -60,7 +60,7 @@
 /* Block: Account */
 .block-account { border-color: #bbb;
     .block-title { background: #fc9d36 url(../images/bkg_block-title-account.gif) repeat-x 0 100%; border: 0; padding: 3px 10px;
-        strong { color: #fff; font-size: 13px; }
+        strong { color: #fff; font-size: em(13); }
     }
     .block-content { background: #fbfaf6; padding: 7px 10px 7px;
         li a { border-bottom: 1px solid #ddd; color: #5f5d5c; display: block; padding: 3px 0; text-decoration: none !important;
@@ -75,7 +75,7 @@
 /* Block: Currency Switcher */
 .block-currency { background: url(../images/bkg_block-currency.gif) no-repeat 0 0; border: 0; height: 51px; padding: 7px 12px 10px;
     .block-title { background: none; border: 0; margin: 0 0 5px; padding: 0;
-        strong { background: url(../images/i_block-currency.gif) no-repeat 0 50%; color: #fff; font: bold 13px/21px Arial, Helvetica, sans-serif; padding: 0 0 0 21px; text-transform: none; }
+        strong { background: url(../images/i_block-currency.gif) no-repeat 0 50%; color: #fff; font: bold em(13)/em(21) Arial, Helvetica, sans-serif; padding: 0 0 0 21px; text-transform: none; }
     }
     .block-content { background: none; padding: 0;
         select { padding: 0; width: 100%; }
@@ -98,7 +98,7 @@
         .btn-remove { margin: 0; position: absolute; right: 4px; top: 9px; }
         .btn-previous { right: 17px; }
     }
-    .actions { background: #cad6e4; border: 1px solid #dee5e8; border-width: 1px 0; font-size: 11px; padding: 4px 5px 4px 9px; text-align: right;
+    .actions { background: #cad6e4; border: 1px solid #dee5e8; border-width: 1px 0; font-size: em(11); padding: 4px 5px 4px 9px; text-align: right;
         a { float: none; }
     }
 }
@@ -161,7 +161,7 @@
     tr {
         &.add-to-row td { background: #fffada; text-align: center; }
         &.first td { text-align: center;
-            .product-name { color: #203548; font-size: 13px; font-weight: bold; margin: 0 0 5px; }
+            .product-name { color: #203548; font-size: em(13); font-weight: bold; margin: 0 0 5px; }
             .product-name a { color: #203548; }
             .ratings { margin: 0 auto; width: 69px; }
         }
@@ -180,7 +180,7 @@
 /* Block: Poll */
 .block-poll {
     .block-title strong { background-image: url(../images/i_block-poll.gif); }
-    .block-subtitle { font-size: 12px; }
+    .block-subtitle { font-size: em(12); }
     label { color: #777; font-weight: bold; }
     input.radio { float: left; margin: 1px -18px 0 0; }
     .label { display: block; margin-left: 18px; }
@@ -195,7 +195,7 @@
 .block-tags {
     .block-title strong { background-image: url(../images/i_block-tags.gif); }
     .block-content {
-        .tags-list { background: none; border: 0; font-size: 12px; }
+        .tags-list { background: none; border: 0; font-size: em(12); }
         a { color: #1b2d3b; }
     }
     .actions { text-align: right;
